# fishcareyolo

./: .gitignore  AGENTS.md  LICENSE  README.md  package.json
.expo/: settings.json
.github/workflows/: eas-build-bot.yml
.husky/: commit-agent.ts  pre-commit  prepare-commit-msg
app/: app.config.ts  app.json  bunfig.toml  eas.json  global.css  package-lock.json  package.json  tsconfig.json
app/app/: +html.tsx  _layout.tsx  crop.tsx  history.tsx  index.tsx  preview.tsx  results.tsx  settings.tsx
app/app/disease/: [id].tsx
app/app/navigation/: BottomTabs.tsx  BottomTabsList.types.ts  HomeStack.tsx  HomeStackParam.types.ts  RootNavigation.tsx  RootStackedList.types.ts
app/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  flat-tab-bar.tsx  hover-card.tsx  icon.tsx  input.tsx  label.tsx  menubar.tsx  native-only-animated-view.tsx  popover.tsx  progress.tsx  (+12 more)
app/lib/: default-tab.ts  storage.ts  theme-context.tsx
app/scripts/: generate-css.ts
expo-app/: app.json  package.json
expo-app/app/: _layout.tsx
expo-app/components/: external-link.tsx  haptic-tab.tsx  parallax-scroll-view.tsx  themed-view.tsx
expo-app/constants/: theme.ts
model/: README.md  evaluate.py  mina.ipynb  pyproject.toml
model/cli/: train.py  tune.py
model/dataset/: get.py
model/mina/: export.py  train.py  tune.py
model/mina/core/: constants.py
model/scripts/: publish-release.sh
model/tests/: test_tuning.py
spec/: design.md  requirements.md  tasks.md
(+45 files in other folders)
